# nonogram_detector

./: CMakeLists.txt
nonogram_detector/: CMakeLists.txt
nonogram_detector/include/: cross_locs_detector.hpp  grid_detector.hpp  image_operations.hpp  masks.hpp  point_compare.hpp
nonogram_detector/src/: cross_locs_detector.cpp  grid_detector.cpp  image_operations.cpp  masks.cpp  point_compare.cpp
nonogram_detector_application/: CMakeLists.txt  main.cpp
nonogram_detector_test/: CMakeLists.txt  main.cpp
